--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--content----------------->
 	    <div class="content">
             <div class="self">
-            <img src="self4.jpg"/>	
+            <img src="hello.png"/>	
         </div>
         <!--TEXT-->
         <div class="main-text">
@@ -51,6 +51,7 @@
             <a href="mailto:beldarjafar@gmail.com? subject=Via Personal Website" target="_blank" title="Email me" alt="email" class="say-hi-btn">Say Hi!</a> 
         </div>
     </div>
+
 
     <!--ABOUT SECTION-->
     <section id="about">
@@ -105,7 +106,7 @@
             </div>
         </div>
     </section>
-
+ 
     <!--PROECT SECTION-->
     <section id="projects">
             <h2 class="headings">
