--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 </div>
             </a>
-            <a href="https://github.com/jafar-b">
+            <a href="https://todo-app1101.herokuapp.com/">
 
     <div class="project-container">
         <strong class="project-heading ">
