added new project

--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
         A basic TicTacToe  Command-Line based game made in python.. 
     </div>
 </a>
+<a href="https://jafar-b.github.io/WeatherApp" target="blank">
+
+    <div class="project-container">
+        
+        <strong class="project-heading ">Weather Application</strong>
+        This is a Weather Application made using react. (Best viewed in mobile.) 
+    </div>
+</a>
     
 </div>          
 </div>
