Added Project - News Website

--- a/index.html
+++ b/index.html
@@ -105,18 +105,17 @@
         <!--SKILLS-->
         <div class="skill-container">
             <h2 class="headings">
-                MY SKILLS &nbsp;
+                LANGUAGES I HAVE EXPERIENCE WITH &nbsp;
                 <img src="skills.png" class="heading-img">
             </h2>
             <br>
             <div class="skill-set">
                 <div class="skill">Python</div>
-                <div class="skill">HTML</div>
-                <div class="skill">CSS</div>
-                <div class="skill">Android/Java</div>
-                <div class="skill">Javascript</div>
-                <div class="skill">C language</div>
+                <div class="skill">Java & Android</div>
+                <div class="skill">Javascript (MERN)</div>
+                <div class="skill">C / C++</div>
                 <div class="skill">PHP</div>
+
             </div>
         </div>
     </section>
@@ -169,12 +168,20 @@
                     This is a Weather Application made using react. (Best viewed in mobile.)
                 </div>
             </a>
+            <a href="https://github.com/jafar-b" target="blank">
+
+                <div class="project-container">
+
+                    <strong class="project-heading ">News Website</strong>
+                    This is a News Website made using Nextjs and Tailwind css. The news is fetched through Open News Api.
+                </div>
+            </a>
 
         </div>
         </div>
     </section>
 
-    <!--CONTACT SECTION-->
+    <!--CONTACTS SECTION-->
     <section id="contact">
         <h2 class="headings">
             CONTACT ME &nbsp;
