changed some css and added images to project boxes

--- a/index.html
+++ b/index.html
@@ -135,7 +135,11 @@
                     <strong class="project-heading">
                         Tailoring Website
                     </strong>
+                    <div class="project-imgs">
 
+                        <img src="https://user-images.githubusercontent.com/72983957/188497909-c7ea4b69-da58-464a-bc1f-8f65234dc435.png"  class="project-ss"/>
+
+                    </div>
                     A Custom Tailoring website which has similar functionalities of an ecommerce website..This website
                     is made in a collaboration with a friend.
 
@@ -147,6 +151,11 @@
                     <strong class="project-heading ">
 
                         Todo Application </strong>
+                        <div class="project-imgs">
+
+                            <img src="./todo.png"  class="project-ss"/>
+    
+                           </div>
                     A simple Todo application made using React-hooks..The Todo gets stored in the localstorage until
                     cleared manually.
 
@@ -161,19 +170,27 @@
                 </div>
             </a>
             <a href="https://jafar-b.github.io/WeatherApp" target="blank">
-
                 <div class="project-container">
 
-                    <strong class="project-heading ">Weather Application</strong>
-                    This is a Weather Application made using react. (Best viewed in mobile.)
+                <strong class="project-heading ">Weather Application</strong>
+                    <div class="project-imgs">
+ 
+                        <img src="./weatherapp.jpeg" class="project-ss" />
+
+                       </div>
+                This is a Weather Application made using react. (Best viewed in mobile.)
                 </div>
             </a>
             <a href="https://github.com/jafar-b" target="blank">
 
                 <div class="project-container">
-
                     <strong class="project-heading ">News Website</strong>
-                    This is a News Website made using Nextjs and Tailwind css. The news is fetched through Open News Api.
+                    <div class="project-imgs">
+
+                        <img src="./news-site.png" class="project-ss"/>
+
+                       </div>
+                     This is a News Website made using Nextjs and Tailwind css. The news is fetched through Open News Api.
                 </div>
             </a>
 
