minor changes in the css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <title>Its raining, isn't it?</title>
+    <title>JAFAR BELDAR</title>
 
 </head>
 
@@ -21,7 +21,7 @@
         <nav>
             <!--LOGO-->
             <a href="#" class="logo">
-                <img src="logo.jpg" />
+                <img src="SELF.jpg" />
             </a>
             <!--MENU-->
             <ul class="menu">
@@ -54,15 +54,20 @@
 
 
     <!--ABOUT SECTION-->
+
     <section id="about">
         <div id="bio">
             <div class="bio-text">
                 <h2 class="headings" id="aboutus">
-                    ABOUT ME &nbsp;
+                    ABOUT ME &nbsp;<img class="aboutmeimg" src="CODER.png" alt="aboutme" />
                 </h2>
                 <!--ABOUT MYSELF-->
-                <br>Extremely driven to develop my skills and grow professionally.
-                <br>Currently pursuing my Bachelors from Finolex Academy of Management and Technology, Ratnagiri.
+                <br>
+                <p>
+
+                    AGE: 20, &nbsp; RESIDENCE: MAHARASHTRA(INDIA). &nbsp; PINCODE: 415612.
+                </p>
+                <br>Pursuing Bachelors from Finolex Academy of Management and Technology, Ratnagiri.
                 <br>A keen learner trying and exploring every field..always making sure i love the work i do.
                 <br>Have intermediate knowledge about hacking and web security.
                 <br>Currently learning MERN.
@@ -105,7 +110,7 @@
         <!--SKILLS-->
         <div class="skill-container">
             <h2 class="headings">
-                LANGUAGES I HAVE EXPERIENCE WITH &nbsp;
+                LANGUAGES &nbsp;
                 <img src="skills.png" class="heading-img">
             </h2>
             <br>
@@ -137,7 +142,8 @@
                     </strong>
                     <div class="project-imgs">
 
-                        <img src="https://user-images.githubusercontent.com/72983957/188497909-c7ea4b69-da58-464a-bc1f-8f65234dc435.png"  class="project-ss"/>
+                        <img src="https://user-images.githubusercontent.com/72983957/188497909-c7ea4b69-da58-464a-bc1f-8f65234dc435.png"
+                            class="project-ss" />
 
                     </div>
                     A Custom Tailoring website which has similar functionalities of an ecommerce website..This website
@@ -151,11 +157,11 @@
                     <strong class="project-heading ">
 
                         Todo Application </strong>
-                        <div class="project-imgs">
+                    <div class="project-imgs">
 
-                            <img src="./todo.png"  class="project-ss"/>
-    
-                           </div>
+                        <img src="./todo.png" class="project-ss" />
+
+                    </div>
                     A simple Todo application made using React-hooks..The Todo gets stored in the localstorage until
                     cleared manually.
 
@@ -172,13 +178,13 @@
             <a href="https://jafar-b.github.io/WeatherApp" target="blank">
                 <div class="project-container">
 
-                <strong class="project-heading ">Weather Application</strong>
+                    <strong class="project-heading ">Weather Application</strong>
                     <div class="project-imgs">
- 
+
                         <img src="./weatherapp.jpeg" class="project-ss" />
 
-                       </div>
-                This is a Weather Application made using react. (Best viewed in mobile.)
+                    </div>
+                    This is a Weather Application made using react. (Best viewed in mobile.)
                 </div>
             </a>
             <a href="https://github.com/jafar-b" target="blank">
@@ -187,10 +193,11 @@
                     <strong class="project-heading ">News Website</strong>
                     <div class="project-imgs">
 
-                        <img src="./news-site.png" class="project-ss"/>
+                        <img src="./news-site.png" class="project-ss" />
 
-                       </div>
-                     This is a News Website made using Nextjs and Tailwind css. The news is fetched through Open News Api.
+                    </div>
+                    This is a News Website made using Nextjs and Tailwind css. The news is fetched through Open News
+                    Api.
                 </div>
             </a>
 
@@ -201,7 +208,7 @@
     <!--CONTACTS SECTION-->
     <section id="contact">
         <h2 class="headings">
-            CONTACT ME &nbsp;
+            GET CONNECTED &nbsp;
             <img src="contact.png" class="heading-img">
         </h2>
         <div class="contact-options">
