--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <br>
                 <p>
 
-                    AGE: 20, &nbsp; Residence: MAHARASHTRA, INDIA. &nbsp; PINCODE: 415612.
+                    AGE: 20, &nbsp; Residence: Ratnagiri, MH. &nbsp; PINCODE: 415612
                 </p>
                 <br>Pursuing Bachelors from Finolex Academy of Management and Technology, Ratnagiri.
                 <br>A passionate and keen learner trying and exploring every field..always making sure i love the work i do.
