--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <img src="SELF.jpg" />
             </a>
             <!--MENU-->
-            <ul class="menu">
+            <ul class="menu"> 
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume">Resume</a></li>
+                <li><a href="Jafar_Beldar.pdf" download="Jafar_Beldar.pdf">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
 
@@ -40,14 +40,15 @@
     <!--content----------------->
     <div class="content">
         <div class="self">
-            <img src="hello.png" />
+            <!-- <img src="hello.png" /> -->
+            <img src="jafarr.jpg" />
         </div>
         <!--TEXT-->
         <div class="main-text">
             <h1> This is Jafar :)</h1>
             <h2>Always into nerdy stuff, Not a nerd though.</h2><br>
             <!--HI BUTTON-->
-            <a href="mailto:beldarjafar@gmail.com? subject=Via Personal Website" target="_blank" title="Email me"
+            <a href="mailto:beldarjafar@gmail.com? subject=Via Personal Website" target="blank" title="Email me"
                 alt="email" class="say-hi-btn">Say Hi!</a>
         </div>
     </div>
@@ -68,8 +69,8 @@
                     AGE: 20, &nbsp; Residence: Ratnagiri, MH. &nbsp; PINCODE: 415612
                 </p>
                 <br>Pursuing Bachelors from Finolex Academy of Management and Technology, Ratnagiri.
-                <br>A passionate and keen learner trying and exploring every field..always making sure i love the work i do.
-                <br>Paving a way through my interests, I do what i want.
+                <br> Tech enthusiast who likes to stay updated about trending technologies of today.
+                <br>A passionate and keen learner trying and exploring every field, always making sure I love the work I do.
                 <br>Have intermediate knowledge of hacking and web security.
                 <br>
                 
@@ -163,7 +164,7 @@
 
                     </div>
                     A Custom Tailoring website which has similar functionalities of an ecommerce website..This website
-                    is made in a collaboration with a friend.
+                    is made in collaboration with a friend.
 
                 </div>
             </a>
