changed profile photo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="content">
         <div class="self">
             <!-- <img src="hello.png" /> -->
-            <img src="jafarr.jpg" />
+            <img src="main.jpg" />
         </div>
         <!--TEXT-->
         <div class="main-text">
@@ -237,7 +237,7 @@
     <!--CONTACTS SECTION-->
     <section id="contact">
         <h2 class="headings">
-            GET CONNECTED &nbsp;
+            LETS CONNECT👋🏼 &nbsp;
             <img src="contact.png" class="heading-img">
         </h2>
         <div class="contact-options">
