--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="menu"> 
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="Jafar_Beldar.pdf" download="Jafar_Beldar.pdf">Resume</a></li>
+                <li><a href="Jafar_Beldar resume.pdf" download="Jafar_Beldar.pdf">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
 
