added updated resume

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="menu"> 
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="Jafar_Beldar resume.pdf" download="Jafar_Beldar.pdf">Resume</a></li>
+                <li><a href="Jafar_Beldar resume.pdf" download="jafar-beldar.pdf">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
 
@@ -134,7 +134,7 @@
             <div class="skill-set">
                 <div class="skill">Java & Android</div>
                 <div class="skill">Javascript (MERN)</div>
-                <div class="skill">Python</div>
+                <div class="skill">Flutter</div>
             </div>
         </div>
     </section>
@@ -148,7 +148,7 @@
 
         <div class="list">
 
-            <a href="https://github.com/jafar-b" title="Click to know more">
+            <a href="https://github.com/jafar-b/Yax-Tailors-Website" title="Click to know more">
 
                 <div class="project-container">
                     <strong class="project-heading">
@@ -156,13 +156,13 @@
                     </strong>
                     <div class="project-imgs">
 
-                        <img src="https://user-images.githubusercontent.com/72983957/188497909-c7ea4b69-da58-464a-bc1f-8f65234dc435.png"
+                        <img src="https://github.com/jafar-b/Yax-Tailors-Website/blob/main/yax%20tailors%20ss.png?raw=true"
                             class="project-ss" />
 
                     </div>
-                    A Custom Tailoring website which has similar functionalities of an ecommerce website.
-                    Similar to Swiggy but of tailors instead of restaurants.
-                    Made in collaboration with a friend.
+                    An online clothing website which has similar functionalities of an ecommerce website.
+                    made in MERN stack.
+                  
 
                 </div>
             </a>
