--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="menu"> 
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="Jafar_Beldar resume.pdf" download="jafar-beldar.pdf">Resume</a></li>
+                <li><a href="jafar-beldar.pdf" download="Jafar_beldar_resume.pdf">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
 
