--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="content">
         <div class="self">
             <!-- <img src="hello.png" /> -->
-            <img src="main.jpg" />
+            <img src="main.jpeg"/>
         </div>
         <!--TEXT-->
         <div class="main-text">
