--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         <div class="list">
 
-            <a href="#" title="Freelance Platform - MERN + NestJS + PostgreSQL">
+            <a href="https://github.com/jafar-b/nodejs/tree/master/js-files/freelance" title="Freelance Platform - MERN + NestJS + PostgreSQL">
                 <div class="project-container">
                     <strong class="project-heading">
                         Freelance Platform
@@ -161,7 +161,7 @@
                     Built with MERN stack (React + Node.js) and NestJS backend using PostgreSQL database.
                 </div>
             </a>
-            <a href="#" title="Cashew Factory Management System - Python + SQLite">
+            <a href="https://github.com/jafar-b/Cashew-Factory-Coordination-System" title="Cashew Factory Management System - Python + SQLite">
                 <div class="project-container">
                     <strong class="project-heading">
                         Cashew Factory Management System
